Overflow bug?

--- a/public/menu.css
+++ b/public/menu.css
@@ -40,6 +40,8 @@
 
     background: rgba(255, 255, 255, 0.95);
     text-align: left;
+    
+    font-size: calc(1.5vw + 1.7vh);
 }
 #menu .menu-items.is-open > ul {
     padding-top: 0em;
@@ -115,7 +117,8 @@
 
 
 /* -- Some responsive stuff -- */
-@media screen and (min-width: 799px) { /* On bigger screens - make menu button bigger */
+/* On bigger screens - make menu button bigger */
+/* @media screen and (min-width: 799px) {
     #menu .menu-trigger {
         transform: scale(1.5);
         top: 3em;
@@ -147,4 +150,4 @@
         margin-right: 3em;
         margin-top: 1em;
     }
-}
+} */
